--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
   top: 20px;
   background-image: linear-gradient(to right, #aae08fc4, #75cff0c4);
   padding: 10px;
-  box-shadow: 0 5px 10px 1px rgba(255, 237, 215, 0.3);
+  box-shadow: 0 5px 10px 2px #75cff0c4;
   color: black;
   text-align: center;
 }
