--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
   box-shadow: 0 5px 7px 2px #75cff0c4;
   color: black;
   text-align: center;
+  letter-spacing: 5px;
 }
 
 .map-overlay h2 {
