--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  font-size: 1em;
 }
 #map {
   position: absolute;
@@ -20,14 +21,19 @@ body {
   box-shadow: 0 5px 7px 2px #75cff0c4;
   color: black;
   text-align: center;
-  letter-spacing: 5px;
 }
 
 .map-overlay h2 {
   margin: 5px;
   padding: 0px;
+  letter-spacing: 5px;
 }
 .map-overlay p {
   padding: 0px;
   margin: 5px;
+  letter-spacing: 2px;
+}
+.latest-data {
+  font-size: 0.8em;
+  font-weight: 100;
 }
