--- a/styles.css
+++ b/styles.css
@@ -10,34 +10,26 @@ body {
   width: 100%;
 }
 
+.container {
+    position: absolute;
+    top: 50px;
+    display: flex;
+    flex-direction: column;
+      width: 100%;
+      padding: 0px;
+      margin: 0px;
+      background-color: #fee082;
+}
+
 .map-overlay {
   font-family: Arial, Helvetica, sans-serif;
-  position: relative;
   width: 100%;
-  left: 0;
-  top: 20px;
   background-image: linear-gradient(to left, #aae08fdf, #75cff0df);
   padding: 10px;
   color: rgb(70, 70, 70);
-  text-shadow: 0px 0px 3px #75cff0ff;
+  text-shadow: 0px 0px 2px #fee08299;
   text-align: center;
 }
-
-.map-stats {
-  width: 35%;
-  margin: auto;
-  background: rgba(255, 255, 255, 0.8);
-  border-radius: 20px;
-  box-shadow: 0 0 5px 1px #75cff0ff;
-  padding: 10px 20px 10px 20px;
-  text-align: center;
-  padding: 20px 40px 20px 40px;
-  font-weight: 100;
-  letter-spacing: 3px;
-  font-size: 1.1em;
-  color: #313131;
-}
-
 .title {
   letter-spacing: 5px;
   font-weight: 500;
@@ -45,11 +37,30 @@ body {
   padding: 5px;
   margin: 0px;
 }
-
-.latest-data {
-  text-shadow: 1px 1px 2px #c5c5c5;
+.map-stats {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 5px 1px #75cff0ff;
+  letter-spacing: 2px;
+  color: #313131;
+  padding: 0 30px 0 30px;
+  margin: 0;
+  font-size: 0.9em;
+  font-weight: 600;
 }
-.smaller {
-  font-size: 0.6em;
-  color: #6b6b6b;
+.map-stats > p {
+    margin: 0px;
+    padding: 5px;
+}
+.latest-data {
+    display: flex;
+    letter-spacing: 3px;
+    flex-grow: 1;
+}
+.update-data {
+    color: #aaaaaa;
+    font-size: 0.8em;
 }
