--- a/styles.css
+++ b/styles.css
@@ -59,8 +59,10 @@ body {
     display: flex;
     letter-spacing: 3px;
     flex-grow: 1;
+    text-align: left;
 }
 .update-data {
     color: #aaaaaa;
     font-size: 0.7em;
+    text-align: right;
 }
